commited bus fixes

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Prem Prakash - Angular Consultant</title>
+  <title>Prem Prakash - Front End Consultant</title>
   <meta name="descriptions" content="Prem Prakash is a senoir front end developer with more than 6 years of experience. He has more than 3 years of experience in Angular">
   <meta name="keywords" content="Javascripts,Angular,Angular js,tutorial,prem prakash,1012,html5,oojs,">
   <base href="/">
